# HSQuickLook

./: .gitignore  README.md
acquisition/run/: run_daq_test.rb
acquisition/source/: CMakeLists.txt
acquisition/source/include/: DAQ.hh  DAQ2.hh  DAQ3.hh  MongoDBClient.hh  WaitFor.hh
acquisition/source/ruby/: CMakeLists.txt  dAQTest.i
acquisition/source/rubyext/: CMakeLists.txt  dAQTest.i
acquisition/source/src/: DAQ.cc  DAQ2.cc  DAQ3.cc  MongoDBClient.cc  WaitFor.cc
analyzer/run/: run_analyzer.rb
analyzer/source/: CMakeLists.txt
analyzer/source/include/: AnalyzerModuleExample1.hh  AnalyzerModuleExample2.hh  DocumentBuilder.hh  MongoDBClient.hh  WaitFor.hh
analyzer/source/rubyext/: CMakeLists.txt  HSQuickLook.i
analyzer/source/src/: AnalyzerModuleExample1.cc  AnalyzerModuleExample2.cc  DocumentBuilder.cc  MongoDBClient.cc  WaitFor.cc
clients/: test.sh
clients/hsql_client/: index.html
clients/hsql_client/css/: flot_view.css  hsql_view.css
clients/hsql_client/js/: HSQuickLook.graph.js  HSQuickLook.main.js  JGraph.js  JMultiGraph.js  hsql_ws_client.js
clients/hsql_client/user_data/: def_data.js  schema_list.json  user_configuration.json  user_view.css
clients/hsql_client/user_data/schema/: replace.rb
clients/hsql_client/user_data/schema/HXI1/: HXI1.APMU.APMU_GRB.js  HXI1.APMU.APMU_HIST.js  HXI1.APMU.APMU_HK.js  HXI1.APMU.APMU_HK.json  HXI1.APMU.APMU_SCL.js  HXI1.APMU.APMU_SCL.json  HXI1.APMU.IMAGES.js  HXI1.APMU.IMAGES.json  HXI1.APMU.PRM.js  HXI1.APMU.PRM.json  HXI1.CAM.EVNT_H.js  HXI1.CAM.EVNT_H.json  HXI1.CAM.EVNT_L.js  HXI1.CAM.EVNT_L.json  HXI1.CAM.EVNT_M.js  HXI1.CAM.EVNT_M.json  HXI1.CAM.SCL.js  HXI1.CAMERA.IMAGES.js  HXI1.CAMERA.IMAGES.json  HXI1.CPMU.CPMU_HK.js  HXI1.CPU_SWR.CHKSUM.js  HXI1.DIAG_MIO1.CHKSUM.js  HXI1.DIAG_MIO1.CHKSUM.json  HXI1.DIAG_MIO1_SWR.CHKSUM.js  HXI1.DIAG_MIO1_SWR.CHKSUM.json  HXI1.DIAG_MIO2.CHKSUM.js  HXI1.DIAG_MIO2_SWR.CHKSUM.js  HXI1.DIAG_MIO2_SWR.CHKSUM.json  HXI1.DIAG_SPCD.CHKSUM.js  HXI1.DIAG_SPCD.CHKSUM.json  HXI1.DIAG_SPCD_SWR.CHKSUM.js  HXI1.DIAG_SPCD_SWR.CHKSUM.json  HXI1.FPGA_SWR.CHKSUM.js  HXI1.FPGA_SWR.CHKSUM.json  HXI1.MIO1.CHKSUM.js  HXI1.MIO1_SWR.CHKSUM.js  HXI1.MIO2.CHKSUM.js  HXI1.MIO2.CHKSUM.json  HXI1.MIO2U.PRM.js  HXI1.MIO2U.PRM.json  (+56 more)
clients/hsql_client/user_data/schema/HXI2/: HXI2.APMU.APMU_GRB.js  HXI2.APMU.APMU_GRB.json  HXI2.APMU.APMU_HIST.js  HXI2.APMU.APMU_HK.js  HXI2.APMU.APMU_SCL.js  HXI2.APMU.APMU_SCL.json  HXI2.APMU.PRM.js  HXI2.CAM.EVNT_H.js  HXI2.CAM.EVNT_L.js  HXI2.CAM.EVNT_M.js  HXI2.CAM.EVNT_M.json  HXI2.CAM.SCL.js  HXI2.CAMERA.IMAGES.js  HXI2.CPMU.CPMU_HK.js  HXI2.DIAG_MIO1.CHKSUM.js  HXI2.DIAG_MIO2.CHKSUM.js  HXI2.MIO1_SWR.CHKSUM.js  HXI2.MIO2U.PRM.js  HXI2.MIO2U.PRM.json  HXI2.SYS.CMD_ECHO.js  HXI2.SYS.SWR_PATH_ADDR.js  HXI2.SYS.SYS_HK_FM.js  HXI2.SYS.UAPP_CMD_REG.js  HXI2.SYS.UAPP_NPTSK_REG_01_32.js  HXI2.SYS.UAPP_TLM_REG.js  HXI2.USR.APMU_PRM_TBL_0.js  HXI2.USR.APMU_PRM_TBL_0.json  HXI2.USR.APMU_PRM_TBL_1.js  HXI2.USR.APMU_PRM_TBL_1.json  HXI2.USR.APMU_PRM_TBL_2.js  HXI2.USR.APMU_PRM_TBL_3.js  HXI2.USR.APMU_PRM_TBL_3.json  HXI2.USR.DE_STAT.js  HXI2.USR.DE_STAT.json  (+13 more)
clients/hsql_client_hxi2piql/: index.html
clients/hsql_client_hxi2piql/css/: hsql_view.css
clients/hsql_client_hxi2piql/user_data/: def_data.js
clients/hsql_client_hxipiql/js/: hsql_ws_client.js
clients/hsql_client_hxipiql/user_data/: def_data.js  user_view.css
clients/hsql_client_hxiql/js/: hsql_ws_client.js  hsql_ws_client_pi.js
clients/hsql_client_hxiql/user_data/: def_data_pi.js
clients/hsql_client_select/: index.html
clients/hsql_client_select/css/: hsql_view.css
clients/hsql_client_select/js/: hsql_ws_client.js
clients/hsql_client_select/user_data/: def_data.js  schema_list.js
clients/hsql_client_sgdpiql/: index.html
clients/hsql_client_sgdpiql/js/: JGraph.js  hsql_ws_client.js
clients/hsql_client_sgdpiql/user_data/: def_data.js
clients/hsquicklook/: index.html
clients/hsquicklook/css/: hsquicklook_view.css
clients/hsquicklook/js/: hsquicklook.graph.js  hsquicklook.main.js
clients/hsquicklook/user_data/: user_configuration.json
clients/hsquicklook_hxisgd/: index.html
hsql_client/css/: hsql_view.css
hsql_client/js/: hsql_ws_client.js
hsql_client/user_data/: def_data.js
hsql_client1/user_data/: def_data.js
hsql_client2/user_data/: def_data.js  user_view.css
hsql_client3/: index.html
hsql_client3/js/: hsql_ws_client.js
hsql_client3/user_data/: def_data.js
hsql_client_hxiql/: index.html  index_piql.html
hsql_client_hxiql/css/: hsql_view.css
hsql_client_hxiql/js/: hsql_ws_client.js  hsql_ws_client_pi.js
hsql_client_hxiql/user_data/: def_data.js  def_data_pi.js
hsql_server/: hsql_ws_server.rb
misc/: update_schema.rb
ws_server/: hsquicklook_ws_server.rb
(+697 files in other folders)
